# plann

./: .gitignore  .lychee.toml  .pre-commit-config.yaml  CALENDAR_SERVER_RECOMMENDATIONS.md  CHANGELOG.md  DESIGN.md  Makefile  NEXT_LEVEL.md  OLLAMA_INTEGRATION.md  README.md  TASK_MANAGEMENT.md  USER_GUIDE.md  calendar.conf.example  calendar.conf.example.yaml  pyproject.toml  requirements-ollama.txt  setup.cfg  setup.py  test_config_dialog.py
.github/workflows/: linkcheck.yml  publish.yaml  tests.yaml
calendar_cli/: cal.py
docs/: CODE_REVIEW.md
docs/source/: conf.py  index.rst
examples/: copy-calendar  copy-calendar.md
plann/: ai_cli.py  cli.py  commands.py  config.py  gui.py  interactive.py  lib.py  metadata.py  ollama.py  panic_planning.py  template.py  timespec.py
tests/: README  test_cal.py  test_functional.py  test_lib.py  test_panic.py  test_plann_cli.py  test_template.py  test_timespec.py
